# PixelStudio

./: .gitignore  CMakeLists.txt  LICENSE  README.md  imgui.ini  pixelHouse
main.dSYM/Contents/Resources/DWARF/: main
main.dSYM/Contents/Resources/Relocations/aarch64/: main.yml
pixelhouse.dSYM/Contents/: Info.plist
pixelhouse.dSYM/Contents/Resources/DWARF/: pixelhouse
pixelhouse.dSYM/Contents/Resources/Relocations/aarch64/: pixelhouse.yml
src/: GameManager.h  Grid.cpp  Grid.h  MainMenu.cpp  MainMenu.h  Palette.cpp  Palette.h  Settings.cpp  Settings.h  Shadow.cpp  Shadow.h  main  main.cpp  pixelhouse  utils.cpp  utils.h
src/imgui/: imconfig.h  imgui-SFML.cpp
